--- a/form.html
+++ b/form.html
@@ -60,7 +60,9 @@
                 </div>
                 
                 <div class="button-container">
-                    <button type="submit">Enviar</button>
+                    <button type="submit">
+                        <a href="index.html">Enviar</a>
+                    </button>
                 </div>
 
             </div>
