Login y Formulario mejorado

--- a/form.html
+++ b/form.html
@@ -61,7 +61,7 @@
                 
                 <div class="button-container">
                     <button type="submit">
-                        <a href="index.html">Enviar</a>
+                        <a href="login.html">Enviar</a>
                     </button>
                 </div>
 
