--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
                 
                 <div class="button-container">
                     <button type="submit">
-                        <a href="index.html">Iniciar sesion</a>
+                        <a href="https://klizmanzapata.github.io/E-Commerce/index.html">Iniciar sesion</a>
                     </button>
                 </div>
 
