--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="formstyles.css">
     <link rel="stylesheet" href="transitions.css">
+    <link rel="icon" href="./images/Logo-ViHoliccopia.png">
     <title>Iniciar Sesión</title>
 </head>
 <body>
